working on geographySelector

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -12,4 +12,54 @@
 	* {
 		@apply font-jose;
 	}
+	.custom-checkbox {
+		@apply border-2 xl:border-[3px] border-secondary;
+	}
+	.custom-checkbox:checked {
+		@apply bg-secondary;
+	}
+}
+
+input[type='checkbox'] {
+	appearance: none;
+	-webkit-appearance: none;
+	display: flex;
+	align-content: center;
+	justify-content: center;
+	font-size: 2rem;
+	padding: 0.1rem;
+	border-radius: 0.2rem;
+}
+.custom-checkbox::before {
+	content: '';
+	width: 0.8rem;
+	height: 0.8rem;
+	clip-path: polygon(16% 38%, 36% 74%, 92% 23%, 82% 15%, 40% 49%, 28% 29%);
+	transform: scale(0);
+	background-color: white;
+}
+
+.custom-checkbox:checked::before {
+	transform: scale(1);
+}
+
+.custom-checkbox:checked {
+	background-color: '#009EC2';
+}
+
+@media (min-width: 1280px) {
+	.custom-checkbox::before {
+		width: 1.4rem;
+		height: 1.4rem;
+	}
+	input[type='checkbox'] {
+		appearance: none;
+		-webkit-appearance: none;
+		display: flex;
+		align-content: center;
+		justify-content: center;
+		font-size: 2rem;
+		padding: 0.1rem;
+		border-radius: 0.3rem;
+	}
 }
